--- a/charts/ops/templates/service.yaml
+++ b/charts/ops/templates/service.yaml
@@ -11,5 +11,6 @@ spec:
       targetPort: 80
       protocol: TCP
       name: http
+      type: NodePort
   selector:
     {{- include "ops.serverSelectorLabels" . | nindent 4 }}
