--- a/tasks/alert-gpu-ecc.yaml
+++ b/tasks/alert-gpu-ecc.yaml
@@ -7,10 +7,8 @@ spec:
     desc: check gpu drop in specified host
     host: "alert-gpu=enabled"
     variables:
-        max:
+        threshold:
             default: "1"
-        notifaction:
-            required: true
     steps:
         - name: alert-card-ecc
           content: |
@@ -21,17 +19,13 @@ spec:
               import json
               from datetime import datetime
 
-              hostname = '${hostname}'
-              notifaction = '${notifaction}'
-              maxecc = int('${max}')
-
-              reason = 'ECC'
+              threshold = int('${threshold}')
 
               def send(status, message):
                   payload = {
-                      'host': hostname,
-                      'kind': 'alert-gpu-ecc',
-                      'threshold': str(maxecc),
+                      'host': '${HOSTNAME}',
+                      'kind': '${TASK_NAME}',
+                      'threshold': str(threshold),
                       'operator': '==',
                       'status': status,
                       'message': message
@@ -39,10 +33,10 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.request('POST', notifaction, headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
-              def build_error_message(message, card_id=''):
+              def build_message(message, card_id=''):
                   if card_id == '':
                       return f'异常信息: {message}\n'
                   return f'异常位置: {card_id}\n异常信息: {message}\n'
@@ -50,10 +44,10 @@ spec:
               try:
                   # 1. check nvidia-smi exists /usr/bin/nvidia-sm
                   if not os.path.exists('/usr/bin/nvidia-smi'):
-                      raise Exception(build_error_message('找不到 nvidia-smi 命令'))
+                      raise Exception(build_message('找不到 nvidia-smi 命令'))
                   # 2. check ecc from nvidia-smi
                   output = subprocess.run(['nvidia-smi'], universal_newlines=True, stdout=subprocess.PIPE).stdout
-                  error_message = ''
+                  message = ''
                   lines = [line for line in output.split('\n') if "NVIDIA" in line and "Driver" not in line]
                   for index, line in enumerate(lines):
                       location = line.split(" ")[3]
@@ -61,14 +55,13 @@ spec:
                       if not ecc_count.isdigit():
                           continue
                       ecc_count = int(ecc_count)
-                      if ecc_count > maxecc:
-                          error_message += build_error_message(line, location)
+                      if ecc_count > threshold:
+                          message += build_message(line, location)
               except Exception as e:
-                  if len(error_message) == 0:
-                      error_message = str(e)
+                  if len(message) == 0:
+                      message = str(e)
               finally:
-                  if len(error_message) > 0:
-                      error_message = f'{error_message}{reason}'
-                      send('alert', error_message)
+                  if len(message) > 0:
+                      send('alert', message)
                   else:
-                      send('normal', error_message)
+                      send('normal', message)
