--- a/tasks/alert-gpu-zombie.yaml
+++ b/tasks/alert-gpu-zombie.yaml
@@ -6,9 +6,6 @@ metadata:
 spec:
     desc: check gpu
     host: "alert-gpu=enabled"
-    variables:
-      notifaction:
-        required: true
     steps:
         - name: alert-gpu-zombie
           content: |
@@ -20,27 +17,23 @@ spec:
               import time
               from datetime import datetime
 
-              hostname = '${hostname}'
-              notifaction = '${notifaction}'
-              error_message = ''
-
+              message = ''
               card_id = ''
-              reason = '显存使用异常'
 
               def send(status, message):
                   payload = {
-                      'host': hostname,
-                      'kind': 'alert-gpu-zombie',
+                      'host': '${HOSTNAME}',
+                      'kind': '${TASK_NAME}',
                       'status': status,
                       'message': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.request('POST', notifaction, headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
-              def build_error_message(message, card_id=''):
+              def build_message(message, card_id=''):
                   if card_id == '':
                       return f'异常信息: {message}\n'
                   return f'异常位置: {card_id}\n异常信息: {message}\n'
@@ -48,7 +41,7 @@ spec:
               try:
                   # 1. check nvidia-smi exists /usr/bin/nvidia-sm
                   if not os.path.exists('/usr/bin/nvidia-smi'):
-                      raise Exception(build_error_message('找不到 nvidia-smi 命令'))
+                      raise Exception(build_message('找不到 nvidia-smi 命令'))
                   # 2. 
                   output = subprocess.run(['nvidia-smi' , '--query-compute-apps=process_name,pid,used_memory', '--format=csv,noheader,nounits'], universal_newlines=True, stdout=subprocess.PIPE).stdout
                   lines = [line for line in output.split('\n')]
@@ -63,14 +56,13 @@ spec:
                       for line in alertLines:
                           pid = line.split(', ')[1]
                           num = line.split(', ')[-1]
-                          error_message += build_error_message('有僵尸进程 ' + pid + ' 占用显卡 ' + num + 'MB')
+                          message += build_message('有僵尸进程 ' + pid + ' 占用显卡 ' + num + 'MB')
                   
               except Exception as e:
-                  if len(error_message) == 0:
-                      error_message = build_error_message(str(e))
+                  if len(message) == 0:
+                      message = build_message(str(e))
               finally:
-                  if len(error_message) > 0:
-                      error_message = f'{error_message}{reason}'
-                      send('alert', error_message)
+                  if len(message) > 0:
+                      send('alert', message)
                   else:
-                      send('normal', error_message)
+                      send('normal', message)
