--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -37,7 +37,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/check', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               try:
