--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -28,7 +28,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/check', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               def get_config_maps(namespace="kube-system"):
