--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -62,7 +62,7 @@ spec:
                       elif len(line) > 0:
                           message += build_message(line, index)
                   if card_count != threshold:
-                      message += build_message('gpu count mismatch: %d (desired %d)' % (card_count, desired_card_count))
+                      message += build_message('gpu count mismatch: %d (desired %d)' % (card_count, threshold))
                       raise Exception(message)
                   # 3. lspci check
                   output = subprocess.run(['lspci'], universal_newlines=True, stdout=subprocess.PIPE).stdout
@@ -75,7 +75,7 @@ spec:
                       elif len(line) > 0:
                           message += build_message(line, index)
                   if card_count != threshold:
-                      message += build_message('gpu count mismatch: %d (desired %d)' % (card_count, desired_card_count))
+                      message += build_message('gpu count mismatch: %d (desired %d)' % (card_count, threshold))
                       raise Exception(message)
               except Exception as e:
                   if len(message) == 0:
