--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,6 +23,7 @@ archives:
 - name_template: "opscli-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
   files:
     - tasks/*
+    - taskruns/*
     - pipelines/*
 changelog:
   skip: true
