--- a/tasks/alert-pod-status.yaml
+++ b/tasks/alert-pod-status.yaml
@@ -23,6 +23,7 @@ spec:
 
               message = ''
               labels = "${labels}"
+              statusList = ['Running', 'Succeeded', 'Completed']
 
               def send(status, message):
                   payload = {
@@ -38,45 +39,38 @@ spec:
 
               def get_pods():
                   try:
-                      cmd = "kubectl get pod -A -o wide -l " + labels
+                      cmd = "kubectl get pod -A -o custom-columns=NAMESPACE:.metadata.namespace,NAME:.metadata.name,STATUS:.status.phase,AGE:.metadata.creationTimestamp,NODE:.spec.nodeName -l " + labels
                       result = subprocess.check_output(cmd, shell=True).decode('utf-8')
                       return result
                   except:
                       return
 
-              def parse_age(age_str, current_time):
-                  age_time = current_time
-                  if 'd' in age_str:
-                      age_days = int(age_str.split('d')[0])
-                      age_time = current_time - timedelta(days=age_days)
-                  elif 'h' in age_str:
-                      age_hours = int(age_str.split('h')[0])
-                      age_time = current_time - timedelta(hours=age_hours)
-                  elif 'm' in age_str:
-                      age_minutes = int(age_str.split('m')[0])
-                      age_time = current_time - timedelta(minutes=age_minutes)
-                  return age_time
+              def parse_age(age_str):
+                  return datetime.strptime(age_str, "%Y-%m-%dT%H:%M:%SZ")
 
               pod_data = get_pods()
               if pod_data:
                   lines = pod_data.split('\n')
-                  current_time = datetime.now()
-                  
+                  current_time = datetime.utcnow()
+
                   for line in lines[1:]:
                       fields = line.split()
                       if len(fields) < 5:
                           continue
                       namespace = fields[0]
                       pod_name = fields[1]
-                      status = fields[3]
-                      age_str = fields[5] 
+                      status = fields[2]
+                      age_str = fields[3]
+                      node = fields[4]
+                      
+                      pod_age = parse_age(age_str)
+                      age_seconds = (current_time - pod_age).total_seconds()
+                      
+                      if age_seconds > 300:
+                          if status not in statusList:
+                              message += f"\n{namespace}/{pod_name} {status} {age_str}"
 
-                      pod_age = parse_age(age_str, current_time)
-                      if (current_time - pod_age).total_seconds() > 300:
-                          if status != 'Running':
-                              message += f"\nPod {namespace}/{pod_name} {status} {age_str}"
-
-                  if message:
-                      send('alert', message)
-                  else:
-                      send('normal', 'All pods are in Running state and younger than 5 minutes.')
+              if message:
+                  send('alert', message)
+              else:
+                  send('normal', 'All pods are in ok state and younger than 5 minutes.')
