--- a/pipelines/get-dataset-status.yaml
+++ b/pipelines/get-dataset-status.yaml
@@ -8,14 +8,14 @@ spec:
   variables:
     cluster:
       required: true
-    host:
-      required: true
     namespace:
       required: true
-      desc: 命名空间
+      desc: 命名空间, e.g. namespace/dataset, namespace is what you want
+      regex: ^(?!.*__)([a-z0-9](-[a-z0-9]){0,61}[a-z0-9]?|[a-z0-9]{1,63})$
     dataset:
       required: true
-      desc: 数据集、存储名字
+      desc: 数据集、存储名字, e.g. namespace/dataset, dataset is what you want
+      regex: ^(?!.*__)([a-z0-9](-[a-z0-9]){0,61}[a-z0-9]?|[a-z0-9]{1,63})$
   tasks:
     - name: 查询数据集状态
       taskRef: get-dataset-status
